Fixed further character creation alignment issues / made media queries for error message

--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -43,7 +43,7 @@ button:hover {
 #b:hover,
 #c:hover,
 #d:hover {
-  background-color: rgba(211, 147, 253, 0.25);
+  background-color: rgb(86, 68, 98);
   color: $color-black;
 }
 
