--- a/layout/_layout.scss
+++ b/layout/_layout.scss
@@ -42,9 +42,15 @@
 }
 
 .character-creation__error {
-  position: absolute;
+  position: sticky;
+  position: -webkit-sticky;
+  bottom: 20vh;
   text-align: center;
-  margin: 0 10vw;
+  margin: 0 auto;
+  background-color: $color-red;
+  color: $color-grey;
+  padding: 4px 12px;
+  border-radius: 20px;
 }
 
 .character-creation__btn-ribbon {
@@ -80,6 +86,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  max-height: 106px;
+  min-height: 106px;
   row-gap: 5vh;
   margin-bottom: 6vh;
   &__container {
@@ -337,8 +345,15 @@
   flex-direction: column;
   align-items: center;
   row-gap: 4vh;
-  background-color: $color-red;
+  background-color: rgb(86, 68, 98);
   color: $color-grey;
+
+  &-title,
+  &-result,
+  &-message {
+    padding: 10px 30px;
+    border-radius: 10px;
+  }
 }
 
 .title--top {
@@ -362,6 +377,12 @@
   row-gap: 5vh;
 }
 
+@media screen and (max-width: 576px) {
+  .menu--start {
+    max-height: 55vh;
+  }
+}
+
 @media screen and (min-width: 576px) {
   .menu {
     min-height: 82vh;
@@ -379,7 +400,7 @@
   }
 
   .ability__container {
-    margin: 5vh 0 0 0;
+    margin: 3vh 0 0 0;
     min-width: 100%;
   }
 
@@ -394,6 +415,11 @@
 }
 
 @media screen and (min-width: 768px) {
+  .character-creation__error {
+    position: fixed;
+    bottom: 18vh;
+  }
+
   .stats__abilities {
     padding: 0;
     margin-right: 2vw;
@@ -436,6 +462,11 @@
     margin-top: 24vh;
   }
 
+  .character-creation__error {
+    position: fixed;
+    bottom: 12vh;
+  }
+
   .stats {
     max-width: 1100px;
 
@@ -450,6 +481,10 @@
 
   [class*="equipment-desc"] {
     min-width: 86%;
+  }
+
+  .game {
+    margin: 20vh 5vw 0 5vw;
   }
 
   .desktop-margin {
