--- a/main.css
+++ b/main.css
@@ -142,9 +142,15 @@ select {
 }
 
 .character-creation__error {
-  position: absolute;
+  position: sticky;
+  position: -webkit-sticky;
+  bottom: 20vh;
   text-align: center;
-  margin: 0 10vw;
+  margin: 0 auto;
+  background-color: #d293fd;
+  color: #1b1b1b;
+  padding: 4px 12px;
+  border-radius: 20px;
 }
 
 .character-creation__btn-ribbon {
@@ -173,6 +179,8 @@ select {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  max-height: 106px;
+  min-height: 106px;
   row-gap: 5vh;
   margin-bottom: 6vh;
 }
@@ -407,8 +415,12 @@ select {
   flex-direction: column;
   align-items: center;
   row-gap: 4vh;
-  background-color: #d293fd;
+  background-color: #564462;
   color: #1b1b1b;
+}
+.game__popup-title, .game__popup-result, .game__popup-message {
+  padding: 10px 30px;
+  border-radius: 10px;
 }
 
 .title--top {
@@ -432,6 +444,11 @@ select {
   row-gap: 5vh;
 }
 
+@media screen and (max-width: 576px) {
+  .menu--start {
+    max-height: 55vh;
+  }
+}
 @media screen and (min-width: 576px) {
   .menu {
     min-height: 82vh;
@@ -449,7 +466,7 @@ select {
   }
 
   .ability__container {
-    margin: 5vh 0 0 0;
+    margin: 3vh 0 0 0;
     min-width: 100%;
   }
 
@@ -463,6 +480,11 @@ select {
   }
 }
 @media screen and (min-width: 768px) {
+  .character-creation__error {
+    position: fixed;
+    bottom: 18vh;
+  }
+
   .stats__abilities {
     padding: 0;
     margin-right: 2vw;
@@ -503,6 +525,11 @@ select {
     margin-top: 24vh;
   }
 
+  .character-creation__error {
+    position: fixed;
+    bottom: 12vh;
+  }
+
   .stats {
     max-width: 1100px;
   }
@@ -515,6 +542,10 @@ select {
 
   [class*=equipment-desc] {
     min-width: 86%;
+  }
+
+  .game {
+    margin: 20vh 5vw 0 5vw;
   }
 
   .desktop-margin {
@@ -735,7 +766,7 @@ button:hover {
 #b:hover,
 #c:hover,
 #d:hover {
-  background-color: rgba(211, 147, 253, 0.25);
+  background-color: #564462;
   color: #dadada;
 }
 
